udocker (1.0.2)

  * Improve download on repositories that fail authentication on /v2
  * Improve run verification binaries with recursive symbolic links
  * Fix further elements in ENTRYPOINT
    - closes: #53
  * Fix not owner error upon temporary file removal 
    - closes: #50
  * Fix validation of -v volumes specification to impose absolute paths
    - closes: #43
  * Fix variable with spaces in command line -e --env
    - closes: #48
  * Change misleading behavior of import tarball from move to copy
    - closes: #44
  * Improve accelerated seccomp on kernels >= 4.8.0
    - closes: #40

udocker (1.0.1)

  * Minor bugfixes
  * Executable name changed from udocker.py to udocker
  * Added support for login into docker repositories
  * Added support for private repositories
  * Added support for listing of v2 repositories catalog
  * Added checksum verification for sha256 layers
  * Improved download handling for v1 and v2 repositories
  * Improved installation tarball structure
  * Insecure flag fixed
  * Address seccomp change introduced on kernels >= 4.8.0
  * Utilities for packaging
  * Improved verbose levels, messaging and output
    - closes: #24, #23
  * Fully implement support for registry selection --registry parameter
    - closes: #29
  * Provide support for private repositories e.g. gitlab registries
    - closes: #30
  * Provide --insecure command line parameter for SSL requests
    - closes: #31

udocker (1.0.0)

  * Initial version
